attempt 1 to fix bg image on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,10 +185,8 @@ body {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	content: "";
-	position: fixed;
-	inset: 0;
-	background: inherit;
+	background-size: cover;
+	background-position: center;
 	filter: blur(5px) contrast(0.6);
 
 	&#bg-home {
@@ -196,9 +194,11 @@ body {
 	}
 
 	@media (max-width: 768px) {
-		width: auto;
-		left: 50%;
-		transform: translateX(-50%);
+		width: 100%;
+		height: 100%;
+		left: 0;
+		transform: none;
+		object-fit: cover;
 	}
 }
 
